--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html>
-
 <head>
     <link rel="stylesheet" href="style.css">
     <script data-require="jquery@*" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -41,11 +38,44 @@
             border-radius: 8px;
         }
 
+        #start-camera{
+            background-color:#FFA500;
+            border: 1px solid #000000;
+            width: 100px;
+            float: right;
+            font-size: 1em;
+            color: white;
+            text-align: center;
+            border-radius: 8px;
+        }
+
+        body {text-align: center;}
+
+        video {
+            width: 400px;
+            height: 300px;
+            border: 1px solid black; }
+
+        #vidwrap{
+            margin: 20px 0;
+            background-color:#FFA500;
+            clear:both;
+            float:left;
+            visibility:hidden;
+        }
+
+        #take-pic{
+            background-color: #4CAF50;
+        }
+
+        #take-pic-cancel{
+            background-color: #FF0000;
+        }
+
+        #snapshot {height:3em;}
+
         #receiptForm{
             clear:both;
-        table, th, td {
-            border: 1px solid black;
-        }
         }
 
         #receiptList {
@@ -115,6 +145,8 @@
             border-radius: 4px;
             visibility: hidden;
             clear: both;
+            float:left;
+            width:50%;
         }
 
         #tagDropDown{
@@ -174,8 +206,6 @@
             visibility:hidden;
         }
 
-
-
         #cancel-receipt{
             float:left;
             width: 30%;
@@ -211,6 +241,10 @@
         // This is the idiomatic way to ensure that JQuery does not
         // execute until the page has loaded
 
+        var imageCapture;
+        var track;
+
+
         $(function(){
             getAllReceipts();
         })
@@ -220,9 +254,104 @@
             x.style.visibility = 'visible';
         }
 
+        function attachMediaStream(mediaStream) {
+            $('video')[0].srcObject = mediaStream;
+
+            // Saving the track allows us to capture a photo
+            track = mediaStream.getVideoTracks()[0];
+            imageCapture = new ImageCapture(track);
+        }
+
+        function startVideo() {
+            var x = document.getElementById('vidwrap');
+            x.style.visibility = 'visible';
+
+            $(`<div id="vidwrap">
+          <video autoplay></video>
+          <button id ="take-pic" onclick="takeSnapshot()">Snap</button>
+          <button id ="take-pic-cancel" onclick="cancelShot()">Cancel</button>
+        </div>`)
+            //.appendTo(document.getElementById("#add-receipt"));
+
+            navigator.mediaDevices.getUserMedia({video: {facingMode: { exact: "environment" }}})
+                .then(attachMediaStream)
+                .catch(error => {
+                navigator.mediaDevices.getUserMedia({video: true})
+                .then(attachMediaStream)
+                .catch(error => {
+                console.log('you are fooked');
+        })
+        });
+        }
+
+        function takeSnapshot() {
+            // create a CANVAS element that is same size as the image
+            //imageCapture.grabFrame()
+            imageCapture.takePhoto()
+
+                .then(blob => createImageBitmap(blob))
+        .then(img => {
+                var canvas = document.createElement('canvas');
+            canvas.width = img.width;
+            canvas.height = img.height;
+
+            canvas.getContext('2d').drawImage(img, 0, 0);
+            console.log(canvas.toDataURL('image/png'));
+
+            var data = canvas.toDataURL('image/png');
+
+            const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
+            
+            //const api = "http://localhost:8080";
+            data = data.substring("data:image/png;base64,".length);
+
+            //gets rid of the videowrap and camera
+            var x = document.getElementById('vidwrap');
+            x.style.visibility = 'hidden';
+            track.stop();
+
+            //open the drop down
+            var dropDown= document.getElementById('dropDown');
+            dropDown.style.visibility = 'visible';
+
+            $.ajax({
+                url: api + '/images/',
+                type: 'POST',
+                data: data,
+                headers: {
+                    "Content-Type": "text/plain"
+                },
+                success: function(response){
+                    console.log(data);
+                    document.getElementById('merchant').value = response.merchantName;
+                    document.getElementById('amount').value = response.amount;
+
+                }
+            })
+
+
+
+
+            //remove the video dom
+            //var thingToRemove = document.querySelectorAll("video")[0];
+            //thingToRemove.parentNode.removeChild(thingToRemove);
+
+            //how do i stop the video on my screen
+
+
+
+        });
+        }
+
+        function cancelShot(){
+            track.stop();
+            var video = document.getElementById('vidwrap');
+            video.style.visibility = 'hidden';
+        }
+
         function saveReceipt(){
             const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
-            //const api = "http://ec2-13-59-58-183.us-east-2.compute.amazonaws.com:8080";
+            //const api = "http://localhost:8080";
 
             $.ajaxSetup({
                 contentType: "application/json; charset=utf-8"
@@ -273,8 +402,7 @@
 
         function saveTag(event, receiptID){
             const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
-            //const api = "http://ec2-13-59-58-183.us-east-2.compute.amazonaws.com:8080";
-            //"http://ec2-13-59-58-183.us-east-2.compute.amazonaws.com:8080";
+
 
             event.which = event.which || event.keyCode;
             if (event.which!=13){
@@ -307,7 +435,6 @@
 
         function toggleTag(tagName, receiptID){
             const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
-            //const api = "http://ec2-13-59-58-183.us-east-2.compute.amazonaws.com:8080";
 
 
             $.ajax({
@@ -328,7 +455,6 @@
 
         function getAllReceipts(){
             const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
-            //const api = "http://ec2-13-59-58-183.us-east-2.compute.amazonaws.com:8080";
 
             $.getJSON(api+"/receipts", function(receipts){
                 for(var i = receipts.length-1 ; i >= 0; i--) {
@@ -368,14 +494,20 @@
 <DIV id = "container">
     <h1>My receipts</h1>
     <button id="add-receipt" onclick="addReceipt()">+</button>
-
-    <div id = "dropDown">
-        <input id="merchant" name="merchantName" placeholder="merchant">
-        <input id="amount"  name="amount" placeholder="amount">
-        <button id="cancel-receipt" onclick="cancelReceipt()">Cancel</button>
-        <button id="save-receipt" onclick="saveReceipt()">Save</button>
+    <button id ="start-camera" onclick="startVideo()">camera</button>
+    <div id = "overall">
+        <div id="vidwrap">
+            <video autoplay></video>
+            <button id ="take-pic" onclick="takeSnapshot()">Snap</button>
+            <button id ="take-pic-cancel" onclick="cancelShot()">Cancel</button>
+        </div>
+        <div id = "dropDown">
+            <input id="merchant" name="merchantName" placeholder="merchant">
+            <input id="amount"  name="amount" placeholder="amount">
+            <button id="cancel-receipt" onclick="cancelReceipt()">Cancel</button>
+            <button id="save-receipt" onclick="saveReceipt()">Save</button>
+        </div>
     </div>
-
     <div id = "receiptForm"></div>
     <h2>Time</h2>
     <h2>Merchant</h2>
