--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -286,8 +286,8 @@
 
         function takeSnapshot() {
             // create a CANVAS element that is same size as the image
-            //imageCapture.grabFrame()
-            imageCapture.takePhoto()
+            imageCapture.grabFrame()
+            //imageCapture.takePhoto()
 
                 .then(blob => createImageBitmap(blob))
         .then(img => {
@@ -300,8 +300,10 @@
 
             var data = canvas.toDataURL('image/png');
 
-            const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
-            
+            //const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
+
+            const api = "http://ec2-52-14-238-66.us-east-2.compute.amazonaws.com:8080";
+
             //const api = "http://localhost:8080";
             data = data.substring("data:image/png;base64,".length);
 
@@ -350,7 +352,8 @@
         }
 
         function saveReceipt(){
-            const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
+            const api = "http://ec2-52-14-238-66.us-east-2.compute.amazonaws.com:8080";
+            //const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
             //const api = "http://localhost:8080";
 
             $.ajaxSetup({
@@ -401,7 +404,8 @@
         }
 
         function saveTag(event, receiptID){
-            const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
+            const api = "http://ec2-52-14-238-66.us-east-2.compute.amazonaws.com:8080";
+            //const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
 
 
             event.which = event.which || event.keyCode;
@@ -434,7 +438,8 @@
         }
 
         function toggleTag(tagName, receiptID){
-            const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
+            const api = "http://ec2-52-14-238-66.us-east-2.compute.amazonaws.com:8080";
+            //const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
 
 
             $.ajax({
@@ -454,7 +459,8 @@
         }
 
         function getAllReceipts(){
-            const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
+            const api = "http://ec2-52-14-238-66.us-east-2.compute.amazonaws.com:8080";
+            //const api = "http://ec2-52-15-221-191.us-east-2.compute.amazonaws.com:8080";
 
             $.getJSON(api+"/receipts", function(receipts){
                 for(var i = receipts.length-1 ; i >= 0; i--) {
